# zhiqiao_C4

./: .gitignore  FEATURES.md  README.md  WEB_USAGE.md  app.py  base_collector.py  collect_demo.py  collector_manager.py  config.json  config_manager.py  content_model.py  data_storage.py  main.py  news_collector.py  podcast_collector.py  pyproject.toml  test_collector.py  test_config_manager.py  test_new_collectors.py  youtube_collector.py
static/css/: style.css
static/js/: main.js
templates/: index.html
